# pillow-install-meta

./: Cargo.toml  README.md  geninstaller.sh
src/: icon.txt  install_profile.rs  jvm_args.rs  library.rs  main.rs  version_json.rs
