[package]
name = "pillow-install-meta"
version = "0.1.1"
edition = "2021"

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha1 = "0.10.6"
